--- a/.gitignore
+++ b/.gitignore
@@ -242,6 +242,8 @@ Thumbs.db
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python
 
+/.vscode/
+
 /OpenRCT2.app/
 /*.zip
 /upx/
