--- a/.gitignore
+++ b/.gitignore
@@ -243,6 +243,7 @@ Thumbs.db
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python
 
 /.vscode/
+/__pycache__/
 
 /OpenRCT2.app/
 /*.zip
